tests/js_error/source_locations/expression/call/call_with_receiver.exp
Error: 
  ┌ source_locations/expression/call/call_with_receiver.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at method (source_locations/expression/call/call_with_receiver.js:3:11)
  at <global> (source_locations/expression/call/call_with_receiver.js:7:1)